<resources>
    <string name="app_name">Agents</string>
    <string name="Pan_card">Pan Card</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobno">Mobile No.</string>
    <string name="reg_no">Reg</string>
    <string name="delete">Delete Product</string>
    <string name="delete_message">Are you sure you want to delete this Product from database</string>
</resources>
